--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
+.idea
+
 venv/
 
 backend/data/
 backend/.idea
+backend/api/__pycache__
+backend/api/migrations
+backend/backend/__pycache__
 
 frontend/node_modules
