[15/05/2024]Renan Pires - correção de erro.

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,6 @@ backend/.idea
 backend/api/__pycache__
 backend/api/migrations
 backend/backend/__pycache__
+backend/dotenv_files/.env
 
 frontend/node_modules
