--- a/backend/dotenv_files/.env-example
+++ b/backend/dotenv_files/.env-example
@@ -10,5 +10,5 @@ DB_ENGINE="django.db.backends.postgresql"
 POSTGRES_DB="change-me"
 POSTGRES_USER="change-me"
 POSTGRES_PASSWORD="change-me"
-POSTGRES_HOST="localhost"
+POSTGRES_HOST="psql"
 POSTGRES_PORT="5432"
